--- a/.github/workflows/validate_selinux_compile.yml
+++ b/.github/workflows/validate_selinux_compile.yml
@@ -10,19 +10,17 @@ on:
     branches: [ "main" ]
 
 jobs:
-  analyze:
-    name: Analyze
+  build:
+    name: Validate SELinux code
+
     runs-on: self-hosted
+
     permissions:
       actions: read
       contents: read
-      security-events: write
-
-    strategy:
-      fail-fast: true
 
     steps:
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Compile
         run: |
