--- a/.github/workflows/validate_selinux_compile.yml
+++ b/.github/workflows/validate_selinux_compile.yml
@@ -5,9 +5,16 @@ name: "Validate SELinux code"
 
 on:
   push:
-    branches: [ "*" ]
+    paths:
+      - '**.te'
+      - '**.fc'
+      - '**.if'
   pull_request:
     branches: [ "main" ]
+    paths:
+      - '**.te'
+      - '**.fc'
+      - '**.if'
 
 jobs:
   build:
