Implement interfaces to allow connection to services
Create interfaces `springboot_allow_connectto` and `springboot_allow_consumed_service` to allow the `springboot_t` domain to connect to services.

Solves #20

Signed-off-by: Hubert Quarantel-Colombani <hubert@quarantel.name>

--- a/.github/workflows/validate_selinux_compile.yml
+++ b/.github/workflows/validate_selinux_compile.yml
@@ -20,7 +20,7 @@ jobs:
   build:
     name: Validate SELinux code
 
-    runs-on: self-hosted
+    runs-on: [self-hosted, CentOS-8]
 
     permissions:
       actions: read
@@ -31,5 +31,5 @@ jobs:
 
       - name: Compile
         run: |
-          cd se_module/ && make -f /usr/share/selinux/devel/Makefile springboot.pp
+          cd se_module/ && make -f /usr/share/selinux/devel/Makefile
 
