Fix workflow syntax
Signed-off-by: Hubert Quarantel-Colombani <hubert@quarantel.name>

--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -1,3 +1,8 @@
+#
+# SELinux policy module RPM build
+#
+name: "Build RPM to install SELinux policy module"
+
 on:
     push:
        branches: [ "main" ]
