--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -38,10 +38,10 @@ jobs:
 
       - name: Replace Tokens in RPM spec file
         run: |
-            latest_rlse_url="https://api.github.com/repos/hubertqc/selinux_springboot/releases/latest"
-            latest_rlse_tag=$( curl -Ls ${latest_rlse_url} | awk '/tag_name/ { t=$NF; gsub("[\",]", "", t); print t }' )
+            #latest_rlse_url="https://api.github.com/repos/hubertqc/selinux_springboot/releases/latest"
+            #latest_rlse_tag=$( curl -Ls ${latest_rlse_url} | awk '/tag_name/ { t=$NF; gsub("[\",]", "", t); print t }' )
             
-            version=$( echo "${latest_rlse_tag}" | sed -E 's/^v?([0-9]+\.[0-9]+\.[0-9]+).*$/\1/' )       
+            version=$( echo "${{ github.ref }}" | sed -E 's/^v?([0-9]+\.[0-9]+\.[0-9]+).*$/\1/' )       
             if [ -n "${version}" ]
             then
                 sed -i -e "s/#{version}#/${version}/" rpm/selinux_springboot.spec
