Switch to ubuntu-latest runner
Signed-off-by: Hubert Quarantel-Colombani <hubert@quarantel.name>

--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   build:
     name: Create RPM Release
-    runs-on: [self-hosted, CentOS-8]
+    runs-on: ubuntu-latest
 
     steps:
 
