--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -42,7 +42,7 @@ jobs:
             version=$( echo "${{ github.ref }}" | sed -E 's/^v?([0-9]+\.[0-9]+\.[0-9]+).*$/\1/' )       
             if [ -n "${version}" ]
             then
-                sed -i -e "s/#{version}#/${version}/" rpm/selinux_springboot.spec
+                sed -i -E "s/#{version}#/${version}/" rpm/selinux_springboot.spec
             fi
             
       - name: build RPM package
