--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -5,8 +5,6 @@ name: "Build RPM to install SELinux policy module"
 
 on:
   push:
-    branches: [ "main" ]
-
     # Sequence of patterns matched against refs/tags
     tags:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
@@ -44,7 +42,7 @@ jobs:
             version=$( echo "${{ github.ref }}" | sed -E 's/^v?([0-9]+\.[0-9]+\.[0-9]+).*$/\1/' )       
             if [ -n "${version}" ]
             then
-                sed -i -e "s/#{version}#/${version}/" rpm/selinux_springboot.spec
+                sed -i -E "s/#{version}#/${version}/" rpm/selinux_springboot.spec
             fi
             
       - name: build RPM package
