--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -39,10 +39,10 @@ jobs:
             #latest_rlse_url="https://api.github.com/repos/hubertqc/selinux_springboot/releases/latest"
             #latest_rlse_tag=$( curl -Ls ${latest_rlse_url} | awk '/tag_name/ { t=$NF; gsub("[\",]", "", t); print t }' )
             
-            version=$( echo "${{ github.ref }}" | sed -E 's/^v?([0-9]+\.[0-9]+\.[0-9]+).*$/\1/' )       
+            version=$( echo "${{ github.ref }}" | sed -E 's,^.*/v?([0-9]+\.[0-9]+\.[0-9]+).*$,\1,' )       
             if [ -n "${version}" ]
             then
-                sed -i -E "s/#{version}#/${version}/" rpm/selinux_springboot.spec
+                sed -i -E "s,#{version}#,${version}," rpm/selinux_springboot.spec
             fi
             
       - name: build RPM package
