--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -40,7 +40,7 @@ jobs:
             if [ -n "${version}" ]
             then
                 sed -i -E "s,#\{version\}#,${version}," rpm/selinux_springboot.spec
-                tar -cvz -f v${version}.tar.gz -C ../ --exclude='.git*' --exclude='rpm' --transform="s,/,-${version}/," selinux_springboot
+                tar -cvz -f rpm/v${version}.tar.gz -C ../ --exclude='.git*' --exclude='rpm' --transform="s,/,-${version}/," selinux_springboot
             fi
             
       - name: build RPM package
