--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -49,7 +49,7 @@ jobs:
           spec_file: "rpm/selinux_springboot.spec"
 
       - name: Get binary RPM package characteritics
-        id: get_binrpm_name
+        id: get_binrpm_chars
         run: |
           rpm_arch=$( awk '/^BuildArch/ { print $NF }' rpm/selinux_springboot.spec )
           rpm_name=$( awk '/^Name/      { print $NF }' rpm/selinux_springboot.spec )
@@ -67,7 +67,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ${{ steps.get_binrpm_name.outputs.rpm_file_path }}
-          asset_name: ${{ steps.get_binrpm_name.outputs.rpm_file_name }}
+          asset_path: ${{ steps.get_binrpm_chars.outputs.rpm_file_path }}
+          asset_name: ${{ steps.get_binrpm_chars.outputs.rpm_file_name }}
           asset_content_type: ${{ steps.rpm_build.outputs.rpm_content_type }}
 
