--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -30,7 +30,7 @@ jobs:
           body: |
             Changes in this Release
             - Create RPM
-            - Upload Source RPM
+            - Upload RPM
           draft: false
           prerelease: false
 
@@ -47,6 +47,18 @@ jobs:
         uses: naveenrajm7/rpmbuild@master
         with:
           spec_file: "rpm/selinux_springboot.spec"
+
+      - name: Get binary RPM package characteritics
+        id: get_binrpm_chars
+        run: |
+          rpm_arch=$( awk '/^BuildArch/ { print $NF }' rpm/selinux_springboot.spec )
+          rpm_name=$( awk '/^Name/      { print $NF }' rpm/selinux_springboot.spec )
+          rpm_vers=$( awk '/^Version/      { print $NF }' rpm/selinux_springboot.spec )
+          rpm_file_path=$( ls ${{ steps.rpm_build.outputs.rpm_dir_path }}/${rpm_arch}/${rpm_name}-${rpm_vers}*.${rpm_arch}.rpm )
+          rpm_file_name=$( basename ${rpm_file_path} )
+          echo "::set-output name=rpm_arch::${rpm_arch}"
+          echo "::set-output name=rpm_file_path::${rpm_file_path}"
+          echo "::set-output name=rpm_file_name::${rpm_file_name}"
             
       - name: Upload Release Asset
         id: upload-release-asset 
@@ -55,7 +67,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ${{ steps.rpm_build.outputs.source_rpm_path }}
-          asset_name: ${{ steps.rpm_build.outputs.source_rpm_name }}
+          asset_path: ${{ steps.get_binrpm_chars.outputs.rpm_file_path }}
+          asset_name: ${{ steps.get_binrpm_chars.outputs.rpm_file_name }}
           asset_content_type: ${{ steps.rpm_build.outputs.rpm_content_type }}
 
