--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -56,9 +56,16 @@ jobs:
           rpm_vers=$( awk '/^Version/      { print $NF }' rpm/selinux_springboot.spec )
           rpm_file_path=$( ls ${{ steps.rpm_build.outputs.rpm_dir_path }}/${rpm_arch}/${rpm_name}-${rpm_vers}*.${rpm_arch}.rpm )
           rpm_file_name=$( basename ${rpm_file_path} )
+          rpm_file_256sum=$( sha256sum ${rpm_file_path} | cut -d " " -f 1 )
+          rpm_file_512sum=$( sha512sum ${rpm_file_path} | cut -d " " -f 1 )
           echo "::set-output name=rpm_arch::${rpm_arch}"
           echo "::set-output name=rpm_file_path::${rpm_file_path}"
           echo "::set-output name=rpm_file_name::${rpm_file_name}"
+          echo "::set-output name=rpm_file_256sum::${rpm_file_256sum}"
+          echo "::set-output name=rpm_file_512sum::${rpm_file_512sum}"
+          # create checksum files
+          echo "${rpm_file_256sum}" > ${rpm_file_path}.SHA256
+          echo "${rpm_file_512sum}" > ${rpm_file_path}.SHA512
             
       - name: Upload Release Asset
         id: upload-release-asset 
@@ -71,3 +78,24 @@ jobs:
           asset_name: ${{ steps.get_binrpm_chars.outputs.rpm_file_name }}
           asset_content_type: ${{ steps.rpm_build.outputs.rpm_content_type }}
 
+      - name: Upload Release Asset SHA256
+        id: upload-release-asset_sha256 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ${{ steps.get_binrpm_chars.outputs.rpm_file_path }}.SHA256
+          asset_name: ${{ steps.get_binrpm_chars.outputs.rpm_file_name }}.SHA256.txt
+          asset_content_type: text/plain
+
+      - name: Upload Release Asset SHA512
+        id: upload-release-asset_sha512 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ${{ steps.get_binrpm_chars.outputs.rpm_file_path }}.SHA512
+          asset_name: ${{ steps.get_binrpm_chars.outputs.rpm_file_name }}.SHA512.txt
+          asset_content_type: text/plain
