Change the RPM containing release name
Signed-off-by: Hubert Quarantel-Colombani <hubert@quarantel.name>

--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -25,12 +25,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: ${{ github.ref }}
+          tag_name: ${{ github.ref }}-rpmbuild
           release_name: Release ${{ github.ref }}
           body: |
             Changes in this Release
             - Create RPM
             - Upload RPM
+            - Upload check sums (SHA256 and SHAR512)
           draft: false
           prerelease: false
 
