--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -65,9 +65,10 @@ jobs:
           echo "::set-output name=rpm_file_name::${rpm_file_name}"
           echo "::set-output name=rpm_file_256sum::${rpm_file_256sum}"
           echo "::set-output name=rpm_file_512sum::${rpm_file_512sum}"
+          
           # create checksum files
-          echo "${rpm_file_256sum}" > ${rpm_file_path}.SHA256
-          echo "${rpm_file_512sum}" > ${rpm_file_path}.SHA512
+          echo "${rpm_file_256sum}" > ${rpm_file_name}.SHA256
+          echo "${rpm_file_512sum}" > ${rpm_file_name}.SHA512
             
       - name: Upload Release Asset
         id: upload-release-asset 
@@ -87,7 +88,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ steps.get_binrpm_chars.outputs.rpm_file_path }}.SHA256
+          asset_path: ${{ steps.get_binrpm_chars.outputs.rpm_file_name }}.SHA256
           asset_name: ${{ steps.get_binrpm_chars.outputs.rpm_file_name }}.SHA256.txt
           asset_content_type: text/plain
 
@@ -98,6 +99,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ steps.get_binrpm_chars.outputs.rpm_file_path }}.SHA512
+          asset_path: ${{ steps.get_binrpm_chars.outputs.rpm_file_name }}.SHA512
           asset_name: ${{ steps.get_binrpm_chars.outputs.rpm_file_name }}.SHA512.txt
           asset_content_type: text/plain
