--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -7,7 +7,8 @@ on:
   push:
     # Sequence of patterns matched against refs/tags
     tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+      - 'v[0-9]+.[0-9]+.[0-9]+'
+      # Push events to matching v*, i.e. v1.0, v20.15.10
   
 jobs:
   build:
@@ -25,12 +26,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: ${{ github.ref }}
+          tag_name: ${{ github.ref }}-rpmbuild
           release_name: Release ${{ github.ref }}
           body: |
             Changes in this Release
             - Create RPM
             - Upload RPM
+            - Upload check sums (SHA256 and SHAR512)
           draft: false
           prerelease: false
 
@@ -56,9 +58,17 @@ jobs:
           rpm_vers=$( awk '/^Version/      { print $NF }' rpm/selinux_springboot.spec )
           rpm_file_path=$( ls ${{ steps.rpm_build.outputs.rpm_dir_path }}/${rpm_arch}/${rpm_name}-${rpm_vers}*.${rpm_arch}.rpm )
           rpm_file_name=$( basename ${rpm_file_path} )
+          rpm_file_256sum=$( sha256sum ${rpm_file_path} | cut -d " " -f 1 )
+          rpm_file_512sum=$( sha512sum ${rpm_file_path} | cut -d " " -f 1 )
           echo "::set-output name=rpm_arch::${rpm_arch}"
           echo "::set-output name=rpm_file_path::${rpm_file_path}"
           echo "::set-output name=rpm_file_name::${rpm_file_name}"
+          echo "::set-output name=rpm_file_256sum::${rpm_file_256sum}"
+          echo "::set-output name=rpm_file_512sum::${rpm_file_512sum}"
+          
+          # create checksum files
+          echo "${rpm_file_256sum}" > ${rpm_file_name}.SHA256
+          echo "${rpm_file_512sum}" > ${rpm_file_name}.SHA512
             
       - name: Upload Release Asset
         id: upload-release-asset 
@@ -71,3 +81,24 @@ jobs:
           asset_name: ${{ steps.get_binrpm_chars.outputs.rpm_file_name }}
           asset_content_type: ${{ steps.rpm_build.outputs.rpm_content_type }}
 
+      - name: Upload Release Asset SHA256
+        id: upload-release-asset_sha256 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ${{ steps.get_binrpm_chars.outputs.rpm_file_name }}.SHA256
+          asset_name: ${{ steps.get_binrpm_chars.outputs.rpm_file_name }}.SHA256.txt
+          asset_content_type: text/plain
+
+      - name: Upload Release Asset SHA512
+        id: upload-release-asset_sha512 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ${{ steps.get_binrpm_chars.outputs.rpm_file_name }}.SHA512
+          asset_name: ${{ steps.get_binrpm_chars.outputs.rpm_file_name }}.SHA512.txt
+          asset_content_type: text/plain
