--- a/.github/workflows/validate_selinux_compile.yml
+++ b/.github/workflows/validate_selinux_compile.yml
@@ -64,7 +64,7 @@ jobs:
   add_tag:
     name: Add SELinux module version tag on the branch
 
-    if: github.event_name == 'push' && ( github.ref_name == 'main' || startsWith(github.ref_name, 'release/' )
+    if: github.event_name == 'push' && ( github.ref_name == 'main' || startsWith(github.ref_name, 'release/') )
 
     needs: build
     
