--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -4,58 +4,92 @@
 name: "Build RPM to install SELinux policy module"
 
 on:
-  push:
-    # Sequence of patterns matched against refs/tags
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
-      # Push events to matching v*, i.e. v1.0, v20.15.10
-  
+  release:
+    types: [ published ]
+      
 jobs:
-  build:
-    name: Create RPM Release
-    runs-on: ubuntu-latest
+  get_release_url:
+    name: Get release info
+
+    runs-on: [self-hosted, Linux]
+
+    outputs:
+      upload_url: ${{ steps.get_release.outputs.upload_url }}
 
     steps:
 
       - name: Checkout code
         uses: actions/checkout@master
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: ${{ github.ref }}-rpmbuild
-          release_name: Release ${{ github.ref }}
-          body: |
-            Changes in this Release
-            - Create RPM
-            - Upload RPM
-            - Upload check sums (SHA256 and SHAR512)
-          draft: false
-          prerelease: false
+          ref: ${{ github.ref }}
 
+      - name: Get release
+        id: get_release
+        uses: bruceadams/get-release@v1.2.3
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+
+
+  build:
+    name: Build RPM and upload it to elease
+    
+    needs: get_release_url
+
+    runs-on: ubuntu-latest
+    
+    env:
+      SEMODULE: springboot
+      RPM_SPEC_FILE: rpm/selinux_springboot.spec
+
+    steps:
+
+      - name: Checkout code
+        uses: actions/checkout@master
+        with:
+          ref: ${{ github.ref }}
+          
       - name: Prepare RPM spec file
         run: |
-            version=$( echo "${{ github.ref }}" | sed -E 's,^.*/v?([0-9]+\.[0-9]+\.[0-9]+).*$,\1,' )       
-            if [ -n "${version}" ]
+            version_from_tag=$( echo "${{ github.ref_name }}" | sed -E 's,^v?([0-9]+\.[0-9]+\.[0-9]+).*$,\1,' )
+            
+            version_from_semodule=$( awk '
+                /^[[:blank:]]*module[[:blank:]]+/ {
+                  sub("[[:blank:]]*;$", "")
+                  module_vers=$3
+                }
+                /^[[:blank:]]*policy_module[[:blank:]]*\(/ {
+                  sub("^[[:blank:]]*policy_module[^,]+,[[:blank:]]*", "")
+                  sub("[[:blank:]]*)[[:blank:]]*$", "")
+                  module_vers=$0
+                }
+                END {
+                  print module_vers
+                }' se_module/${SEMODULE}.te )
+            
+            if [ -n "${version_from_tag}" -a -n "${version_from_semodule}" -a "${version_from_tag}" = "${version_from_semodule}" ]
             then
-                sed -i -E "s,#\{version\}#,${version}," rpm/selinux_springboot.spec
+                echo "::notice title=RPMspec::Replacing the SELinux module version (${version_from_semodule}) in the RPM spec file (${RPM_SPEC_FILE})."
+                sed -i -E "s,#\{version\}#,${version_from_semodule}," ${RPM_SPEC_FILE}
+            else
+              [ -z "${version_from_tag}" ] && echo "::error title=FATAL::Tag does look like a valid version."
+              [ -z "${version_from_semodule}" ] && echo "::error title=FATAL:: Could not get SELinux module version."
+              [ "${version_from_tag}" = "${version_from_semodule}" ] || echo "::error title=FATAL:: Tag version (${version_from_tag} does match SELinux module version (${version_from_tag})."
+              exit 127
             fi
             
       - name: build RPM package
         id: rpm_build
-        uses: naveenrajm7/rpmbuild@master
+        uses: hubertqc/rpmbuild@master
         with:
-          spec_file: "rpm/selinux_springboot.spec"
+#           spec_file: "${RPM_SPEC_FILE}"
+         spec_file: "rpm/selinux_springboot.spec"
 
       - name: Get binary RPM package characteritics
         id: get_binrpm_chars
         run: |
-          rpm_arch=$( awk '/^BuildArch/ { print $NF }' rpm/selinux_springboot.spec )
-          rpm_name=$( awk '/^Name/      { print $NF }' rpm/selinux_springboot.spec )
-          rpm_vers=$( awk '/^Version/      { print $NF }' rpm/selinux_springboot.spec )
+          rpm_arch=$( awk '/^BuildArch/ { print $NF }' rpm/selinux_${SEMODULE}.spec )
+          rpm_name=$( awk '/^Name/      { print $NF }' rpm/selinux_${SEMODULE}.spec )
+          rpm_vers=$( awk '/^Version/      { print $NF }' rpm/selinux_${SEMODULE}.spec )
           rpm_file_path=$( ls ${{ steps.rpm_build.outputs.rpm_dir_path }}/${rpm_arch}/${rpm_name}-${rpm_vers}*.${rpm_arch}.rpm )
           rpm_file_name=$( basename ${rpm_file_path} )
           rpm_file_256sum=$( sha256sum ${rpm_file_path} | cut -d " " -f 1 )
@@ -76,7 +110,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          upload_url: ${{ needs.get_release_url.outputs.upload_url }}
           asset_path: ${{ steps.get_binrpm_chars.outputs.rpm_file_path }}
           asset_name: ${{ steps.get_binrpm_chars.outputs.rpm_file_name }}
           asset_content_type: ${{ steps.rpm_build.outputs.rpm_content_type }}
@@ -87,7 +121,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ needs.get_release_url.outputs.upload_url }}
           asset_path: ${{ steps.get_binrpm_chars.outputs.rpm_file_name }}.SHA256
           asset_name: ${{ steps.get_binrpm_chars.outputs.rpm_file_name }}.SHA256.txt
           asset_content_type: text/plain
@@ -98,7 +132,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ needs.get_release_url.outputs.upload_url }}
           asset_path: ${{ steps.get_binrpm_chars.outputs.rpm_file_name }}.SHA512
           asset_name: ${{ steps.get_binrpm_chars.outputs.rpm_file_name }}.SHA512.txt
           asset_content_type: text/plain
