--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -26,8 +26,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: ${{ github.ref }}-rpmbuild
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ github.ref_name }}-rpmbuild
+          release_name: Release ${{ github.ref_name }}
           body: |
             Changes in this Release
             - Create RPM
@@ -38,7 +38,7 @@ jobs:
 
       - name: Prepare RPM spec file
         run: |
-            version=$( echo "${{ github.ref }}" | sed -E 's,^.*/v?([0-9]+\.[0-9]+\.[0-9]+).*$,\1,' )       
+            version=$( echo "${{ github.ref_name }}" | sed -E 's,^v?([0-9]+\.[0-9]+\.[0-9]+).*$,\1,' )       
             if [ -n "${version}" ]
             then
                 sed -i -E "s,#\{version\}#,${version}," rpm/selinux_springboot.spec
