--- a/.github/workflows/validate_selinux_compile.yml
+++ b/.github/workflows/validate_selinux_compile.yml
@@ -52,8 +52,8 @@ jobs:
             module_vers=$3
           }
           /^[[:blank:]]*policy_module[[:blank:]]*\(/ {
-            sub("^[[:blank:]]*policy_module.[[:blank:]]*", "")
-            sub("[[:blank:]]*)$", "")
+            sub("^[[:blank:]]*policy_module[[:blank:]]*[(][[:blank:]]*", "")
+            sub("[[:blank:]]*)[[:blank:]]*$", "")
             split($0, a, "[[:blank:]]*,[[:blank:]]*")
             module_name=a[1]
             module_vers=a[2]
