--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -4,9 +4,11 @@
 name: "Build RPM to install SELinux policy module"
 
 on:
-  release:
-    types: [ published ]
-      
+#  release:
+#    types: [ published ]
+ 
+  workflow_dispatch:
+ 
 jobs:
   get_release_url:
     name: Get release info
@@ -51,6 +53,8 @@ jobs:
       - name: Prepare RPM spec file
         run: |
             version_from_tag=$( echo "${{ github.ref_name }}" | sed -E 's,^v?([0-9]+\.[0-9]+\.[0-9]+).*$,\1,' )
+            release_from_tag=$( echo "${{ github.ref_name }}" | sed -E 's,^v?[0-9]+\.[0-9]+\.[0-9]+(-([0-9]+))?.*$,\2,' )
+            [ -z "${release_from_tag}" ] && release_from_tag=0
             
             version_from_semodule=$( awk '
                 /^[[:blank:]]*module[[:blank:]]+/ {
@@ -69,7 +73,8 @@ jobs:
             if [ -n "${version_from_tag}" -a -n "${version_from_semodule}" -a "${version_from_tag}" = "${version_from_semodule}" ]
             then
                 echo "::notice title=RPMspec::Replacing the SELinux module version (${version_from_semodule}) in the RPM spec file (${RPM_SPEC_FILE})."
-                sed -i -E "s,#\{version\}#,${version_from_semodule}," ${RPM_SPEC_FILE}
+                sed -i -E "s,%\{provided_version\},${version_from_semodule}," ${RPM_SPEC_FILE}
+                sed -i -E "s,%\{provided_release\},${release_from_tag}," ${RPM_SPEC_FILE}
             else
               [ -z "${version_from_tag}" ] && echo "::error title=FATAL::Tag does look like a valid version."
               [ -z "${version_from_semodule}" ] && echo "::error title=FATAL:: Could not get SELinux module version."
