--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -1,7 +1,7 @@
 #
 # SELinux policy module RPM build
 #
-name: "Build RPM to install SELinux policy module"
+name: "Build single no-dist RPM to compile and install SELinux policy module"
 
 on:
 #  release:
@@ -13,7 +13,7 @@ jobs:
   get_release_url:
     name: Get release info
 
-    runs-on: [self-hosted, Linux]
+    runs-on: ubuntu-latest
 
     outputs:
       upload_url: ${{ steps.get_release.outputs.upload_url }}
