Initialise Puppet code for Springboot apps
- create the `springboot` profile to manage core structures,
- create the `springboot::app` defined type to configure a single Springboot app.

Signed-off-by: Hubert Quarantel-Colombani <hubert@quarantel.name>

--- a/systemd/env.SAMPLE
+++ b/systemd/env.SAMPLE
@@ -23,6 +23,9 @@ LOG_PATH=${LOG_DIR}
 
 JAVA_TMPDIR=${VAR_DIR}/temp
 
+# Memory options for the JVM
+JAVA_MEM_OPTS="<%= mem_opts %>"
+
 # Extra arguments for the JAVA command line
 JAVA_EXTRA_ARGS=""
 
@@ -30,7 +33,7 @@ JAVA_EXTRA_ARGS=""
 JAVA_EXTRA_ARGS="${JAVA_EXTRA_ARGS} -Dio.netty.native.workdir=${JAVA_TMPDIR}/dynlib"
 
 # Define a Java security file for the appliction specific requirements
-JAVA_SECURITY_FILE=${CNF_DIR}}/java.scurity
+JAVA_SECURITY_FILE=${CNF_DIR}}/java.security
 
 # Define the main Springboot application configuration file
 SPRING_CONFIG_LOCATION=${CNF_DIR}/application.yaml
