--- a/.github/workflows/validate_selinux_compile.yml
+++ b/.github/workflows/validate_selinux_compile.yml
@@ -69,10 +69,18 @@ jobs:
       - uses: actions/checkout@v3
       - uses: hubertqc/selinux_compile@fedora37
 
+  compile_fedora38:
+    name: Validate SELinux code (Fedora 38)
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: hubertqc/selinux_compile@fedora38
+
 
   semodule_info:
     name: Get SELinux module informations
-    needs: [ compile_centos7, compile_centos8, compile_centos9, compile_fedora36, compile_fedora37 ]
+    needs: [ compile_centos7, compile_centos8, compile_centos9, compile_fedora36, compile_fedora37, compile_fedora38 ]
       
     runs-on: ubuntu-latest
     
