Add a springboot-shutdown.target and Conflicts
Signed-off-by: Hubert Quarantel-Colombani <hubert@quarantel.name>

--- a/systemd/springboot@.service
+++ b/systemd/springboot@.service
@@ -4,6 +4,9 @@ Description=Springboot Server - %I
 Requires=network-online.target time-sync.target
 After=network-online.target time-sync.target basic.target
 
+Conflicts=springboot-shutdown.target
+DefaultDependencies=yes
+
 [Service]
 Type=forking
 
