--- a/systemd/env.SAMPLE
+++ b/systemd/env.SAMPLE
@@ -33,7 +33,7 @@ JAVA_EXTRA_ARGS=""
 JAVA_EXTRA_ARGS="${JAVA_EXTRA_ARGS} -Dio.netty.native.workdir=${JAVA_TMPDIR}/dynlib"
 
 # Define a Java security file for the appliction specific requirements
-JAVA_SECURITY_FILE=${CNF_DIR}}/java.security
+JAVA_SECURITY_FILE=${CNF_DIR}/java.security
 
 # Define the main Springboot application configuration file
 SPRING_CONFIG_LOCATION=${CNF_DIR}/application.yaml
