--- a/.github/workflows/build_all_RPMs.yml
+++ b/.github/workflows/build_all_RPMs.yml
@@ -28,9 +28,9 @@ jobs:
         with:
           ref: ${{ github.ref }}
 
-      - name: Get release
+      - name: Get release upload URL
         id: get_release_url
-        uses: bruceadams/get-release@v1.2.3
+        uses: bruceadams/get-release@v1.3.2
         env:
           GITHUB_TOKEN: ${{ github.token }}
        
@@ -40,8 +40,8 @@ jobs:
           version_from_tag=$( echo "${{ github.ref_name }}" | sed -E 's,^v?([0-9]+\.[0-9]+\.[0-9]+).*$,\1,' )
           release_from_tag=$( echo "${{ github.ref_name }}" | sed -E 's,^v?[0-9]+\.[0-9]+\.[0-9]+(-([0-9]+))?.*$,\2,' )
           [ -z "${release_from_tag}" ] && release_from_tag=0
-          echo "::set-output name=version::${version_from_tag}"
-          echo "::set-output name=release::${release_from_tag}"
+          echo "{version}={${version_from_tag}}" >> $GITHUB_OUTPUT
+          echo "{release}={${release_from_tag}}" >> $GITHUB_OUTPUT
   
   build_RPMs:
     name: Build RPMs and upload them to release
