--- a/.github/workflows/validate_selinux_compile.yml
+++ b/.github/workflows/validate_selinux_compile.yml
@@ -33,7 +33,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@master
       - uses: lhqg/selinux_compile@almalinux8
 
   compile_el9:
@@ -42,7 +42,7 @@ jobs:
     continue-on-error: true
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@master
       - uses: lhqg/selinux_compile@centos9
 
   compile_fedora37:
@@ -50,7 +50,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@master
       - uses: lhqg/selinux_compile@fedora37
 
   compile_fedora38:
@@ -58,7 +58,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@master
       - uses: lhqg/selinux_compile@fedora38
 
   compile_fedora39:
@@ -66,7 +66,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@master
       - uses: lhqg/selinux_compile@fedora39
 
   compile_fedora40:
@@ -74,7 +74,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@master
       - uses: lhqg/selinux_compile@fedora40
 
   semodule_info:
@@ -92,7 +92,7 @@ jobs:
       semodule_vers: ${{ steps.semodule_chars.outputs.semodule_vers }}
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@master
 
       - name: Get SELinux policy module characteristics
         id: semodule_chars
@@ -111,10 +111,9 @@ jobs:
             module_vers=a[2]
           }
           END {
-            print "::set-output name=semodule_name::"module_name
-            print "::set-output name=semodule_vers::"module_vers
-          }' se_module/${SEMODULE}.te
-
+            print "{semodule_name}={"module_name"}"
+            print "{semodule_vers}={"module_vers"}"
+          }' se_module/${SEMODULE}.te >> $GITHUB_OUTPUT
 
   add_tag:
     name: Add SELinux module version tag on the branch
@@ -125,7 +124,7 @@ jobs:
     if: ( github.event_name == 'push' && ( github.ref_name == 'main' || startsWith(github.ref_name, 'release/') ) )
     
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@master
 
       - name: Tag the branch with the SELinux module version and draft a pre-release
         uses: actions/create-release@latest
