--- a/.github/workflows/build_all_RPMs.yml
+++ b/.github/workflows/build_all_RPMs.yml
@@ -40,8 +40,8 @@ jobs:
           version_from_tag=$( echo "${{ github.ref_name }}" | sed -E 's,^v?([0-9]+\.[0-9]+\.[0-9]+).*$,\1,' )
           release_from_tag=$( echo "${{ github.ref_name }}" | sed -E 's,^v?[0-9]+\.[0-9]+\.[0-9]+(-([0-9]+))?.*$,\2,' )
           [ -z "${release_from_tag}" ] && release_from_tag=0
-          echo "{version}={${version_from_tag}}" >> $GITHUB_OUTPUT
-          echo "{release}={${release_from_tag}}" >> $GITHUB_OUTPUT
+          echo "version=${version_from_tag}" >> $GITHUB_OUTPUT
+          echo "release=${release_from_tag}" >> $GITHUB_OUTPUT
   
   build_RPMs:
     name: Build RPMs and upload them to release
