Update workflows fro DEB packages
Signed-off-by: Hubert Quarantel-Colombani <hubert@quarantel.name>

--- a/.github/workflows/build_all_packages.yml
+++ b/.github/workflows/build_all_packages.yml
@@ -1,7 +1,7 @@
 #
 # SELinux policy module RPMs build
 #
-name: "Build RPMs to install compiled SELinux policy module"
+name: "Build RPM and DEB packages to install compiled SELinux policy module"
 
 concurrency: 
   group: SELinux_compile_wkf_group
@@ -46,7 +46,7 @@ jobs:
   build_RPMs:
     name: Build RPMs and upload them to release
     needs: get_release_info
-    uses: lhqg/build_selinux_rpm/.github/workflows/generic_semodule_build.yml@main
+    uses: lhqg/build_selinux_packages/.github/workflows/build_semodule_rpm.yml@main
     secrets:
       gpg_private_key: ${{ secrets.RPM_SIGNING_KEY }}
       gpg_private_key_password: ${{ secrets.RPM_SIGNING_KEY_PASSWORD }}
@@ -56,4 +56,16 @@ jobs:
       release_upload_url: ${{ needs.get_release_info.outputs.upload_url }}
       provided_version: ${{ needs.get_release_info.outputs.version_number }}
       provided_release: ${{ needs.get_release_info.outputs.release_number }}
+      
+  build_DEBs:
+    name: Build Debian/Ubuntu packages and upload them to release
+    needs: get_release_info
+    uses: lhqg/build_selinux_deb/.github/workflows/build_semodule_deb.yml@main
+    secrets:
+      gpg_private_key: ${{ secrets.RPM_SIGNING_KEY }}
+      gpg_private_key_password: ${{ secrets.RPM_SIGNING_KEY_PASSWORD }}
+    with:
+      build_material_dir: dpkg/
+      release_upload_url: ${{ needs.get_release_info.outputs.upload_url }}
+      package_version: ${{ needs.get_release_info.outputs.version_number }}
       
